# ryn

./: .env.example  .gitignore  AGENTS.md  AST_DETECTION_UPGRADE.md  CLAUDE.md  IMPLEMENTATION.md  README.md  TESTING.md  VERIFICATION.md  dev-static-server.mjs  eslint.config.js  next.config.mjs  package-lock.json  package.json  plan.md  pnpm-lock 2.yaml  pnpm-lock.yaml  run-ryn-dev.sh  ryn-full-dec  ryn-stack  ryn-sum  test-cdn-load.js  test-html2canvas-import.js  test-script-load.js  test-simple-async.js  test-webview-screenshot.js  vitest.config.ts  vitest.setup.ts
.claude/: CLAUDE.md  SESSION_SUMMARY.md  TESTING_STATUS.md  settings.local.json
.claude/docs/: README.md  SUBAGENT-HANDOFF.md  agent-coordination.md  ai-code-analysis.md  api-integration-summary.md  phase-3-langgraph-complete.md  phase-4-scanning-spec.md  phase-6-claude-client.md  phase-7-git-integration.md  tauri.md
.gemini/: settings.json
.github/workflows/: e2e.yml  release.yml  test.yml
.kiro/steering/: product.md  structure.md  tech.md
__tests__/e2e/: workflow.test.ts
app/: ARCHITECTURE.md  App.axaml.cs  COMPLETE_FIX.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  START_HERE.md  TECHNICAL_DOCUMENTATION.md  ViewLocator.cs  globals.css  index.html  layout.tsx  package-lock.json  package.json  page.tsx  tsconfig.json  vite.config.ts
app/ViewModels/: MainWindowViewModel.cs
app/analytics/: page.tsx
app/audit/: page.tsx
app/clear-storage/: page.tsx
app/onboarding/: page.tsx
app/scan/: page.tsx
app/settings/: page.tsx
app/src/: App.css  App.tsx  main.tsx
app/src-tauri/: tauri.conf.json
app/test-mcp/: route.ts
app/violation/: page.tsx
components/: ErrorBoundary.tsx  console-logger.tsx  langgraph-init.tsx  mcp-init.tsx
components/audit/: audit-event-card.tsx  audit-filters.tsx  audit-timeline.tsx  audit-trail.tsx  export-report.tsx
components/dashboard/: compliance-score.tsx  dashboard.tsx  quick-actions.tsx  (+5 more)
e2e-tests/: notifications-pattern-only.test.mjs  settings-mcp-buttons.test.mjs  wdio.conf.js
hooks/: use-toast.ts
rynspec/: collaboration-workflow.md  ryn-consolidated.md  ryn-full-dec  ryn-master-plan.md  ryn-stack  ryn-sum
src-tauri/: .taurignore  Cargo.toml  Info.plist  SCAN_FIX_REPORT.md  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-mcp-bridge/: Cargo.toml  README.md  build.rs
src-tauri/plugins/tauri-plugin-mcp-bridge/permissions/: default.toml
src-tauri/plugins/tauri-plugin-mcp-bridge/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-mcp-bridge/permissions/autogenerated/commands/: js_callback.toml
src-tauri/plugins/tauri-plugin-mcp-bridge/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-mcp-bridge/src/: connection.rs  error.rs  lib.rs  protocol.rs  server.rs  state.rs
src-tauri/plugins/tauri-plugin-mcp-bridge/src/commands/: devtools.rs  events.rs  mod.rs  performance.rs  screenshot.rs  script.rs  testing.rs  webview.rs  window.rs
src-tauri/src/: lib.rs  main.rs  rate_limiter.rs
src-tauri/src/commands/: analytics.rs  audit.rs  fix.rs  langgraph.rs  logger.rs  mod.rs  project.rs  scan.rs  settings.rs  violation.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs  schema.sql  test_helpers.rs
src-tauri/src/fix_generator/: claude_client.rs  fix_applicator.rs  grok_client.rs  mod.rs
src-tauri/src/git/: mod.rs  operations.rs
src-tauri/src/langgraph/: agent_runner.rs  mod.rs
src-tauri/src/models/: audit.rs  control.rs  fix.rs  mod.rs  project.rs  scan.rs  scan_cost.rs  settings.rs  violation.rs
src-tauri/src/rules/: a1_2_resilience.rs  ast_based_access_control.rs  cc6_1_access_control.rs  cc6_7_secrets.rs  cc7_2_logging.rs  mod.rs
src-tauri/src/scanner/: constants.rs  file_watcher.rs  framework_detector.rs  javascript_scanner.rs  llm_file_selector.rs  mod.rs  python_scanner.rs  tree_sitter_utils.rs
src-tauri/src/security/: mod.rs  path_validation.rs
src-tauri/src/utils/: audit.rs  code_context.rs  env.rs  mod.rs
src-tauri/tests/: concurrent_scans_test.rs  cost_limit_test.rs  database_migration_edge_cases_test.rs  file_handling_edge_cases_test.rs  file_watcher_stress_test.rs  integration_cost_analytics_test.rs  integration_fix_application_safety_test.rs  integration_fix_quality_validation_test.rs  integration_full_scan_test.rs  llm_file_selector_test.rs  merge_violations_test.rs  migrations_test.rs  scan_real_vulnerable_apps_test.rs  security_validation_test.rs  smoke_test.rs  token_usage_test.rs
src-tauri/tests/common/: mod.rs
(+86 files in other folders)
