[package]
name = "ryn"
version = "0.1.0"
description = "Developer-first SOC 2 compliance tool"
authors = ["ryn team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["test"] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-mcp-bridge = { path = "../../taurimcp/tauri-plugin-mcp-bridge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
walkdir = "2"
regex = "1"
dotenv = "0.15"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
notify = "6"
once_cell = "1"
async-channel = "2"
dirs = "5"


[dev-dependencies]
rstest = "0.21"
tempfile = "3"
mockall = "0.12"
serial_test = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
